--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ yarn-error.log*
 next-env.d.ts
 
 .vercel
+
+
+# Local editor settings
+.vscode/
+
+# Claude local settings
+.claude/settings.local.json
+
+# Accidental Windows file
+nul
